# mo412

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
data/raw/: README.md
exercicios/ex_01/: ex01.py
notebooks/: test_1.ipynb
reports/: Analysis_of_the_Electrical_Network_Topology_CPFL_Paulista_AT_components.txt  Analysis_of_the_Electrical_Network_Topology_CPFL_Paulista_AT_connectivity.txt  Analysis_of_the_Electrical_Network_Topology_CPFL_Paulista_BT_components.txt  Analysis_of_the_Electrical_Network_Topology_CPFL_Paulista_BT_connectivity.txt  Analysis_of_the_Electrical_Network_Topology_CPFL_Paulista_MT_components.txt  Analysis_of_the_Electrical_Network_Topology_CPFL_Paulista_MT_connectivity.txt  Analysis_of_the_Topology_Electrical_Network_CPFL_Paulista_AT_components.txt  Analysis_of_the_Topology_Electrical_Network_CPFL_Paulista_AT_connectivity.txt  Analysis_of_the_Topology_Electrical_Network_CPFL_Paulista_BT_components.txt  Analysis_of_the_Topology_Electrical_Network_CPFL_Paulista_BT_connectivity.txt  Analysis_of_the_Topology_Electrical_Network_CPFL_Paulista_MT_components.txt  Analysis_of_the_Topology_Electrical_Network_CPFL_Paulista_MT_connectivity.txt
src/: a_build_network.py  a_segment_merger.py  b_network_analysis.py  b_segment_merger.py  main.py
src/analysis/: comparative_failure_analysis.py  compare_networks.py  criticality_analysis.py  failure_analysis.py  graph_generator.py  redundancy_analysis.py  topology_analysis.py
src/utils/: configuration_log.py  (+7 more)
