[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mo412"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  {name = ""}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Version 2 License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
keywords = [""]
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "pyogrio>=0.11.1",
    "pandas>=2.3.1",
    "shapely>=2.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.1",
    "pyarrow>=21.0.0",
    "ipdb>=0.13.13",
    "tqdm>=4.67.1",
    "networkx>=3.4.2",
    "powerlaw>=1.5.0",
    "pyvis"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "matplotlib>=3.10.6",
    "plotly>=5.21.0",
    "pytest>=8.2.0",
    "black>=24.4.2",
    "dask>=2024.4.2"
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # Error formatting
    "F",  # Pyflakes
    "I",  # isort
    "B"   # Bugbear
]
ignore = [
    "E501" # Line too long (handled by Black)
]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=src"
testpaths = "tests"